add \imageframe command to create special frames consisting of a full screen image and a title sidebar

--- a/beamercolorthemejku.sty
+++ b/beamercolorthemejku.sty
@@ -239,6 +239,7 @@
 %% Frame title/footer
 %% 
 \setbeamercolor*{frametitle}{parent=normal text}
+\setbeamercolor*{framesubtitle}{parent=frametitle}
 \setbeamercolor*{footline}{bg=white,fg=black}
 \setbeamercolor*{section in head/foot}{parent=footline}
 \setbeamercolor*{page number in head/foot}{parent=section in head/foot}
