--- a/beamerfontthemejku.sty
+++ b/beamerfontthemejku.sty
@@ -234,6 +234,7 @@
 %% Frame title/footer
 %% 
 \setbeamerfont*{frametitle}{family=\sfblackfamily, series=\bfseries, size*={14pt}{16.8pt}}
+\setbeamerfont*{framesubtitle}{parent=frametitle}
 \setbeamerfont*{section in head/foot}{parent=structure, size*={6pt}{7pt}}
 \setbeamerfont*{page number in head/foot}{parent=section in head/foot}
 \setbeamerfont*{date in head/foot}{parent=section in head/foot}
